fixing overflow problem in mobile view

--- a/app/globals.css
+++ b/app/globals.css
@@ -22,4 +22,7 @@ body {
 
 * {
   font-family: Outfit;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
